--- a/h5dfj.html
+++ b/h5dfj.html
@@ -3,7 +3,7 @@
   <head>
     <title>DFJ_heheda</title>
 	  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	  <script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
+	  <script src="https://apps.bdimg.com/libs/jquery/1.11.3/jquery.min.js"></script>
     <style>
 * {
     box-sizing: border-box;
